TOWER-99-bug(cadre-cards): fix card issues
- update role&cert cards options clickable area
- truncate role&cert card titles
- fix update&delete project vacancies list update

[Fixes TOWER-99]
[Fixes TOWER-101]

--- a/src/components/DeleteRoleModal/DeleteRoleModal.scss
+++ b/src/components/DeleteRoleModal/DeleteRoleModal.scss
@@ -1,19 +1,19 @@
-@import "../../assets/sass/abstract/variables";
+@import '../../assets/sass/abstract/variables';
 
 .modal-title {
-    &.text-danger {
-        color: $color-danger;
-    }
+  &.text-danger {
+    color: $color-danger;
+  }
 
-    img {
-        width: 2rem;
-    }
+  img {
+    width: 2rem;
+  }
 }
 
 .modal-footer {
-    &.delete-footer button:last-child {
-        background-color: $color-danger !important;
-    }
+  &.delete-footer button:last-child {
+    background-color: $color-danger !important;
+  }
 }
 
 .text-danger {
